# polylingua

./: .env  README.md  language_preferences.json  main.py  plan-polylingua.prompt.md  pyproject.toml
notebook/: audio_module.ipynb  langdetect.ipynb  language_preferences.json  stt.ipynb  translation.ipynb  tts.ipynb
src/polylingua/: __init__.py  main.py
src/polylingua/audio/: __init__.py  processor.py
src/polylingua/dialogue/: __init__.py  engine.py  manager.py  state.py  turn.py
src/polylingua/language/: __init__.py  detector.py  preferences.py
src/polylingua/stt/: __init__.py  engine.py
src/polylingua/translation/: __init__.py  service.py
src/polylingua/tts/: __init__.py  engine.py
tests/dialogue/: test_manager.py  test_state.py  test_turn.py
