[project]
name = "polylingua"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.2",
    "httpx>=0.28.1",
    "librosa>=0.11.0",
    "numpy>=2.3.5",
    "pydantic>=2.12.4",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.1",
    "scipy>=1.16.3",
    "soundfile>=0.13.1",
    "uvicorn>=0.38.0",
]
