[project]
name = "polylingua"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.2",
    "httpx>=0.28.1",
    "langdetect>=1.0.9",
    "librosa>=0.11.0",
    "lingua-language-detector>=2.0.0",
    "numpy>=2.3.5",
    "openai-whisper>=20240930",
    "pycld2>=0.41",
    "pydantic>=2.12.4",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.1",
    "sacremoses>=0.1.1",
    "datasets>=3.1.0",
    "scipy>=1.16.3",
    "sentencepiece>=0.2.0",
    "soundfile>=0.13.1",
    "transformers>=4.46.3",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "uvicorn>=0.38.0",
    "pytest>=8.3.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
